--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -1,3 +1,15 @@
+#自定义authorizer
+authorizer=org.apache.shiro.authz.ModularRealmAuthorizer
+#自定义permissionResolver
+permissionResolver=org.apache.shiro.authz.permission.WildcardPermissionResolver
+#permissionResolver=com.github.zhangkaitao.shiro.chapter3.permission.BitAndWildPermissionResolver
+authorizer.permissionResolver=$permissionResolver
+#自定义rolePermissionResolver
+#rolePermissionResolver=com.yxzhang.app.shiro.MyRolePermissionResolver
+#authorizer.rolePermissionResolver=$rolePermissionResolver
+
+securityManager.authorizer=$authorizer
+
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
@@ -6,3 +18,4 @@ dataSource.username=root
 dataSource.password=123456
 jdbcRealm.dataSource=$dataSource
 securityManager.realms=$jdbcRealm
+jdbcRealm.permissionsLookupEnabled=true
